--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,13 @@ project(TPSynthese1 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(TPSynthese1 main.c)
+add_executable(TPSynthese1 main.c
+        CustomWrite.c
+        CustomWrite.h
+        Prompt.c
+        Prompt.h
+        GetTime.c
+        GetTime.h
+        Redirect.c
+        Redirect.h
+)
